[workspace]
resolver = "2"
members = [
    # PrisM crates
    "crates/prism",
    "crates/prism-context",
    "crates/prism-types",
    "crates/prism-client",
    "crates/prism-cli",
    "crates/prism-hq",
    # IDE crates
    "ide/acp_thread",
    "ide/acp_tools",
    "ide/action_log",
    "ide/activity_indicator",
    "ide/agent",
    "ide/agent_servers",
    "ide/agent_settings",
    "ide/agent_ui",
    "ide/ai_onboarding",
    "ide/anthropic",
    "ide/askpass",
    "ide/assets",
    "ide/assistant_slash_command",
    "ide/assistant_slash_commands",
    "ide/assistant_text_thread",
    "ide/audio",
    "ide/auto_update",
    "ide/auto_update_helper",
    "ide/auto_update_ui",
    "ide/aws_http_client",
    "ide/bedrock",
    "ide/breadcrumbs",
    "ide/buffer_diff",
    "ide/call",
    "ide/channel",
    "ide/cli",
    "ide/client",
    "ide/clock",
    "ide/cloud_api_client",
    "ide/cloud_api_types",
    "ide/cloud_llm_client",
    "ide/codestral",
    "ide/collab",
    "ide/collab_ui",
    "ide/collections",
    "ide/command_palette",
    "ide/command_palette_hooks",
    "ide/component",
    "ide/component_preview",
    "ide/context_server",
    "ide/copilot",
    "ide/copilot_chat",
    "ide/crashes",
    "ide/credentials_provider",
    "ide/csv_preview",
    "ide/dap",
    "ide/dap_adapters",
    "ide/db",
    "ide/debug_adapter_extension",
    "ide/debugger_tools",
    "ide/debugger_ui",
    "ide/deepseek",
    "ide/denoise",
    "ide/dev_container",
    "ide/diagnostics",
    "ide/docs_preprocessor",
    "ide/edit_prediction",
    "ide/edit_prediction_cli",
    "ide/edit_prediction_context",
    "ide/edit_prediction_types",
    "ide/edit_prediction_ui",
    "ide/editor",
    "ide/encoding_selector",
    "ide/etw_tracing",
    "ide/eval",
    "ide/eval_cli",
    "ide/eval_utils",
    "ide/explorer_command_injector",
    "ide/extension",
    "ide/extension_api",
    "ide/extension_cli",
    "ide/extension_host",
    "ide/extensions_ui",
    "ide/feature_flags",
    "ide/feedback",
    "ide/file_finder",
    "ide/file_icons",
    "ide/fs",
    "ide/fs_benchmarks",
    "ide/fuzzy",
    "ide/git",
    "ide/git_graph",
    "ide/git_hosting_providers",
    "ide/git_ui",
    "ide/go_to_line",
    "ide/google_ai",
    "ide/gpui",
    "ide/gpui_linux",
    "ide/gpui_macos",
    "ide/gpui_macros",
    "ide/gpui_platform",
    "ide/gpui_tokio",
    "ide/gpui_util",
    "ide/gpui_web",
    "ide/gpui_wgpu",
    "ide/gpui_windows",
    "ide/html_to_markdown",
    "ide/http_client",
    "ide/http_client_tls",
    "ide/icons",
    "ide/image_viewer",
    "ide/inspector_ui",
    "ide/install_cli",
    "ide/journal",
    "ide/json_schema_store",
    "ide/keymap_editor",
    "ide/language",
    "ide/language_extension",
    "ide/language_model",
    "ide/language_models",
    "ide/language_onboarding",
    "ide/language_selector",
    "ide/language_tools",
    "ide/languages",
    "ide/line_ending_selector",
    "ide/livekit_api",
    "ide/livekit_client",
    "ide/lmstudio",
    "ide/lsp",
    "ide/markdown",
    "ide/markdown_preview",
    "ide/media",
    "ide/menu",
    "ide/migrator",
    "ide/miniprofiler_ui",
    "ide/mistral",
    "ide/multi_buffer",
    "ide/nc",
    "ide/net",
    "ide/node_runtime",
    "ide/notifications",
    "ide/ollama",
    "ide/onboarding",
    "ide/open_ai",
    "ide/open_path_prompt",
    "ide/open_router",
    "ide/outline",
    "ide/outline_panel",
    "ide/panel",
    "ide/paths",
    "ide/picker",
    "ide/platform_title_bar",
    "ide/prettier",
    "ide/project",
    "ide/project_benchmarks",
    "ide/project_panel",
    "ide/project_symbols",
    "ide/prompt_store",
    "ide/proto",
    "ide/recent_projects",
    "ide/refineable",
    "ide/refineable/derive_refineable",
    "ide/release_channel",
    "ide/remote",
    "ide/remote_connection",
    "ide/remote_server",
    "ide/repl",
    "ide/reqwest_client",
    "ide/rich_text",
    "ide/rope",
    "ide/rpc",
    "ide/rules_library",
    "ide/scheduler",
    "ide/schema_generator",
    "ide/search",
    "ide/session",
    "ide/settings",
    "ide/settings_content",
    "ide/settings_json",
    "ide/settings_macros",
    "ide/settings_profile_selector",
    "ide/settings_ui",
    "ide/shell_command_parser",
    "ide/sidebar",
    "ide/snippet",
    "ide/snippet_provider",
    "ide/snippets_ui",
    "ide/sqlez",
    "ide/sqlez_macros",
    "ide/story",
    "ide/storybook",
    "ide/streaming_diff",
    "ide/sum_tree",
    "ide/svg_preview",
    "ide/system_specs",
    "ide/tab_switcher",
    "ide/task",
    "ide/tasks_ui",
    "ide/telemetry",
    "ide/telemetry_events",
    "ide/terminal",
    "ide/terminal_view",
    "ide/text",
    "ide/theme",
    "ide/theme_extension",
    "ide/theme_importer",
    "ide/theme_selector",
    "ide/time_format",
    "ide/title_bar",
    "ide/toolchain_selector",
    "ide/ui",
    "ide/ui_input",
    "ide/ui_macros",
    "ide/ui_prompt",
    "ide/util",
    "ide/util_macros",
    "ide/vercel",
    "ide/vim",
    "ide/vim_mode_setting",
    "ide/watch",
    "ide/web_search",
    "ide/web_search_providers",
    "ide/which_key",
    "ide/workspace",
    "ide/worktree",
    "ide/worktree_benchmarks",
    "ide/x_ai",
    "ide/zed",
    "ide/zed_actions",
    "ide/zed_env_vars",
    "ide/zeta_prompt",
    "ide/zlog",
    "ide/zlog_settings",
    "ide/ztracing",
    "ide/ztracing_macro",
    # Zed extensions
    "extensions/glsl",
    "extensions/html",
    "extensions/proto",
    "extensions/slash-commands-example",
    "extensions/test-extension",
    # Zed tooling
    "tooling/perf",
    "tooling/xtask",
]
default-members = [
    "crates/prism",
    "crates/prism-context",
    "crates/prism-types",
    "crates/prism-client",
    "crates/prism-cli",
    "crates/prism-hq",
]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]

#
# PrisM crates
#
prism = { path = "crates/prism", default-features = false, features = ["embedded"] }
prism-types = { path = "crates/prism-types" }
prism-client = { path = "crates/prism-client" }
prism-context = { path = "crates/prism-context" }
prism-hq = { path = "crates/prism-hq" }

#
# IDE crates (under ide/)
#
acp_tools = { path = "ide/acp_tools" }
acp_thread = { path = "ide/acp_thread" }
action_log = { path = "ide/action_log" }
agent = { path = "ide/agent" }
activity_indicator = { path = "ide/activity_indicator" }
agent_ui = { path = "ide/agent_ui" }
agent_settings = { path = "ide/agent_settings" }
agent_servers = { path = "ide/agent_servers" }
ai_onboarding = { path = "ide/ai_onboarding" }
anthropic = { path = "ide/anthropic" }
askpass = { path = "ide/askpass" }
assets = { path = "ide/assets" }
assistant_text_thread = { path = "ide/assistant_text_thread" }
assistant_slash_command = { path = "ide/assistant_slash_command" }
assistant_slash_commands = { path = "ide/assistant_slash_commands" }
audio = { path = "ide/audio" }
auto_update = { path = "ide/auto_update" }
auto_update_ui = { path = "ide/auto_update_ui" }
aws_http_client = { path = "ide/aws_http_client" }
bedrock = { path = "ide/bedrock" }
breadcrumbs = { path = "ide/breadcrumbs" }
buffer_diff = { path = "ide/buffer_diff" }
call = { path = "ide/call" }
channel = { path = "ide/channel" }
cli = { path = "ide/cli" }
client = { path = "ide/client" }
clock = { path = "ide/clock" }
cloud_api_client = { path = "ide/cloud_api_client" }
cloud_api_types = { path = "ide/cloud_api_types" }
cloud_llm_client = { path = "ide/cloud_llm_client" }
collab = { path = "ide/collab" }
collab_ui = { path = "ide/collab_ui" }
collections = { path = "ide/collections", version = "0.1.0" }
command_palette = { path = "ide/command_palette" }
command_palette_hooks = { path = "ide/command_palette_hooks" }
component = { path = "ide/component" }
component_preview = { path = "ide/component_preview" }
context_server = { path = "ide/context_server" }
copilot = { path = "ide/copilot" }
copilot_chat = { path = "ide/copilot_chat" }
copilot_ui = { path = "ide/copilot_ui" }
crashes = { path = "ide/crashes" }
credentials_provider = { path = "ide/credentials_provider" }
csv_preview = { path = "ide/csv_preview" }
dap = { path = "ide/dap" }
dap_adapters = { path = "ide/dap_adapters" }
db = { path = "ide/db" }
debug_adapter_extension = { path = "ide/debug_adapter_extension" }
debugger_tools = { path = "ide/debugger_tools" }
debugger_ui = { path = "ide/debugger_ui" }
deepseek = { path = "ide/deepseek" }
derive_refineable = { path = "ide/refineable/derive_refineable" }
dev_container = { path = "ide/dev_container" }
diagnostics = { path = "ide/diagnostics" }
editor = { path = "ide/editor" }
encoding_selector = { path = "ide/encoding_selector" }
etw_tracing = { path = "ide/etw_tracing" }
eval_utils = { path = "ide/eval_utils" }
extension = { path = "ide/extension" }
extension_host = { path = "ide/extension_host" }
extensions_ui = { path = "ide/extensions_ui" }
feature_flags = { path = "ide/feature_flags" }
feedback = { path = "ide/feedback" }
file_finder = { path = "ide/file_finder" }
file_icons = { path = "ide/file_icons" }
fs = { path = "ide/fs" }
fuzzy = { path = "ide/fuzzy" }
git = { path = "ide/git" }
git_graph = { path = "ide/git_graph" }
git_hosting_providers = { path = "ide/git_hosting_providers" }
git_ui = { path = "ide/git_ui" }
go_to_line = { path = "ide/go_to_line" }
google_ai = { path = "ide/google_ai" }
gpui = { path = "ide/gpui", default-features = false }
gpui_linux = { path = "ide/gpui_linux", default-features = false }
gpui_macos = { path = "ide/gpui_macos", default-features = false }
gpui_macros = { path = "ide/gpui_macros" }
gpui_platform = { path = "ide/gpui_platform", default-features = false }
gpui_web = { path = "ide/gpui_web" }
gpui_wgpu = { path = "ide/gpui_wgpu" }
gpui_windows = { path = "ide/gpui_windows", default-features = false }
gpui_tokio = { path = "ide/gpui_tokio" }
gpui_util = { path = "ide/gpui_util" }
html_to_markdown = { path = "ide/html_to_markdown" }
http_client = { path = "ide/http_client" }
http_client_tls = { path = "ide/http_client_tls" }
icons = { path = "ide/icons" }
image_viewer = { path = "ide/image_viewer" }
edit_prediction_types = { path = "ide/edit_prediction_types" }
edit_prediction_ui = { path = "ide/edit_prediction_ui" }
edit_prediction_context = { path = "ide/edit_prediction_context" }
inspector_ui = { path = "ide/inspector_ui" }
install_cli = { path = "ide/install_cli" }
journal = { path = "ide/journal" }
json_schema_store = { path = "ide/json_schema_store" }
keymap_editor = { path = "ide/keymap_editor" }
language = { path = "ide/language" }
language_extension = { path = "ide/language_extension" }
language_model = { path = "ide/language_model" }
language_models = { path = "ide/language_models" }
language_onboarding = { path = "ide/language_onboarding" }
language_selector = { path = "ide/language_selector" }
language_tools = { path = "ide/language_tools" }
languages = { path = "ide/languages" }
line_ending_selector = { path = "ide/line_ending_selector" }
livekit_api = { path = "ide/livekit_api" }
livekit_client = { path = "ide/livekit_client" }
lmstudio = { path = "ide/lmstudio" }
lsp = { path = "ide/lsp" }
markdown = { path = "ide/markdown" }
markdown_preview = { path = "ide/markdown_preview" }
svg_preview = { path = "ide/svg_preview" }
media = { path = "ide/media" }
menu = { path = "ide/menu" }
mermaid-rs-renderer = { git = "https://github.com/zed-industries/mermaid-rs-renderer", rev = "374db9ead5426697c6c2111151d9f246899bc638", default-features = false }
migrator = { path = "ide/migrator" }
mistral = { path = "ide/mistral" }
multi_buffer = { path = "ide/multi_buffer" }
miniprofiler_ui = { path = "ide/miniprofiler_ui" }
nc = { path = "ide/nc" }
net = { path = "ide/net" }
node_runtime = { path = "ide/node_runtime" }
notifications = { path = "ide/notifications" }
ollama = { path = "ide/ollama" }
onboarding = { path = "ide/onboarding" }
open_ai = { path = "ide/open_ai" }
open_path_prompt = { path = "ide/open_path_prompt" }
open_router = { path = "ide/open_router", features = ["schemars"] }
outline = { path = "ide/outline" }
outline_panel = { path = "ide/outline_panel" }
panel = { path = "ide/panel" }
paths = { path = "ide/paths" }
perf = { path = "tooling/perf" }
picker = { path = "ide/picker" }
prettier = { path = "ide/prettier" }
settings_profile_selector = { path = "ide/settings_profile_selector" }
project = { path = "ide/project" }
project_panel = { path = "ide/project_panel" }
project_symbols = { path = "ide/project_symbols" }
prompt_store = { path = "ide/prompt_store" }
proto = { path = "ide/proto" }
recent_projects = { path = "ide/recent_projects" }
refineable = { path = "ide/refineable" }
release_channel = { path = "ide/release_channel" }
remote = { path = "ide/remote" }
remote_connection = { path = "ide/remote_connection" }
remote_server = { path = "ide/remote_server" }
repl = { path = "ide/repl" }
reqwest_client = { path = "ide/reqwest_client" }
rodio = { git = "https://github.com/RustAudio/rodio", rev = "e50e726ddd0292f6ef9de0dda6b90af4ed1fb66a", features = ["wav", "playback", "wav_output", "recording"] }
rope = { path = "ide/rope" }
rpc = { path = "ide/rpc" }
rules_library = { path = "ide/rules_library" }
scheduler = { path = "ide/scheduler" }
search = { path = "ide/search" }
session = { path = "ide/session" }
sidebar = { path = "ide/sidebar" }
settings = { path = "ide/settings" }
settings_content = { path = "ide/settings_content" }
settings_json = { path = "ide/settings_json" }
settings_macros = { path = "ide/settings_macros" }
settings_ui = { path = "ide/settings_ui" }
shell_command_parser = { path = "ide/shell_command_parser" }
snippet = { path = "ide/snippet" }
snippet_provider = { path = "ide/snippet_provider" }
snippets_ui = { path = "ide/snippets_ui" }
sqlez = { path = "ide/sqlez" }
sqlez_macros = { path = "ide/sqlez_macros" }
story = { path = "ide/story" }
streaming_diff = { path = "ide/streaming_diff" }
sum_tree = { path = "ide/sum_tree" }
codestral = { path = "ide/codestral" }
system_specs = { path = "ide/system_specs" }
tab_switcher = { path = "ide/tab_switcher" }
task = { path = "ide/task" }
tasks_ui = { path = "ide/tasks_ui" }
telemetry = { path = "ide/telemetry" }
telemetry_events = { path = "ide/telemetry_events" }
terminal = { path = "ide/terminal" }
terminal_view = { path = "ide/terminal_view" }
text = { path = "ide/text" }
theme = { path = "ide/theme" }
theme_extension = { path = "ide/theme_extension" }
theme_selector = { path = "ide/theme_selector" }
time_format = { path = "ide/time_format" }
platform_title_bar = { path = "ide/platform_title_bar" }
title_bar = { path = "ide/title_bar" }
toolchain_selector = { path = "ide/toolchain_selector" }
ui = { path = "ide/ui" }
ui_input = { path = "ide/ui_input" }
ui_macros = { path = "ide/ui_macros" }
ui_prompt = { path = "ide/ui_prompt" }
util = { path = "ide/util" }
util_macros = { path = "ide/util_macros" }
vercel = { path = "ide/vercel" }
vim = { path = "ide/vim" }
vim_mode_setting = { path = "ide/vim_mode_setting" }
which_key = { path = "ide/which_key" }
watch = { path = "ide/watch" }
web_search = { path = "ide/web_search" }
web_search_providers = { path = "ide/web_search_providers" }
workspace = { path = "ide/workspace" }
worktree = { path = "ide/worktree" }
x_ai = { path = "ide/x_ai" }
zed = { path = "ide/zed" }
zed_actions = { path = "ide/zed_actions" }
zed_env_vars = { path = "ide/zed_env_vars" }
edit_prediction = { path = "ide/edit_prediction" }
zeta_prompt = { path = "ide/zeta_prompt" }
zlog = { path = "ide/zlog" }
zlog_settings = { path = "ide/zlog_settings" }
ztracing = { path = "ide/ztracing" }
ztracing_macro = { path = "ide/ztracing_macro" }

#
# External crates (merged PrisM + Zed)
#

# HTTP server (PrisM only)
axum = { version = "0.8", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "uuid", "chrono", "json", "migrate"] }

# Shared / superset versions
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
sha2 = "0.10"
hex = "0.4.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
anyhow = "1.0.86"
tracing = "0.1.40"
async-trait = "0.1"

# Zed external deps (copy as-is)
agent-client-protocol = { version = "=0.9.4", features = ["unstable"] }
aho-corasick = "1.1"
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "9d9640d4" }
any_vec = "0.14"
arrayvec = { version = "0.7.4", features = ["serde"] }
ashpd = { version = "0.13", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
] }
async-channel = "2.5.0"
async-compat = "0.2.1"
async-compression = { version = "0.4", features = ["gzip", "futures-io"] }
async-dispatcher = "0.1"
async-fs = "2.1"
async-lock = "2.1"
async-pipe = { git = "https://github.com/zed-industries/async-pipe-rs", rev = "82d00a04211cf4e1236029aa03e6b6ce2a74c553" }
async-recursion = "1.0.0"
async-tar = "0.5.1"
async-task = "4.7"
async-tungstenite = "0.33.0"
async_zip = { version = "0.0.18", features = ["deflate", "deflate64"] }
aws-config = { version = "1.8.10", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.8", features = [
    "hardcoded-credentials",
] }
aws-sdk-bedrockruntime = { version = "1.112.0", features = [
    "behavior-version-latest",
] }
aws-smithy-runtime-api = { version = "1.9.2", features = ["http-1x", "client"] }
aws-smithy-types = { version = "1.3.4", features = ["http-body-1-x"] }
backtrace = "0.3"
base64 = "0.22"
bincode = "1.2.1"
bitflags = "2.6.0"
brotli = "8.0.2"
bytes = "1.0"
cargo_metadata = "0.19"
cargo_toml = "0.21"
brush-parser = "0.3"
cfg-if = "1.0.3"
chardetng = "0.1"
ciborium = "0.2"
circular-buffer = "1.0"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
convert_case = "0.8.0"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
cpal = "0.17"
crash-handler = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam = "0.8.4"
ctor = "0.4.0"
dap-types = { git = "https://github.com/zed-industries/dap-types", rev = "1b461b310481d01e02b2603c16d7144b926339f8" }
dashmap = "6.0"
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "from_str",
    "mul",
    "mul_assign",
    "not",
] }
dirs = "4.0"
documented = "0.9.1"
dotenvy = "0.15.0"
ec4rs = "1.1"
emojis = "0.6.1"
env_logger = "0.11"
encoding_rs = "0.8"
exec = "0.3.1"
fancy-regex = "0.16.0"
fork = "0.4.0"
futures = "0.3"
futures-concurrency = "7.7.1"
futures-lite = "1.13"
gh-workflow = { git = "https://github.com/zed-industries/gh-workflow", rev = "c9eac0ed361583e1072860d96776fa52775b82ac" }
git2 = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"] }
globset = "0.4"
handlebars = "4.3"
heck = "0.5"
heed = { version = "0.21.0", features = ["read-txn-no-tls"] }
human_bytes = "0.4.1"
html5ever = "0.27.0"
http = "1.1"
http-body = "1.0"
hyper = "0.14"
ignore = "0.4.22"
image = "0.25.1"
imara-diff = "0.1.8"
indexmap = { version = "2.7.0", features = ["serde"] }
indoc = "2"
inventory = "0.3.19"
itertools = "0.14.0"
json_dotpath = "1.1"
jsonschema = "0.37.0"
jsonwebtoken = "10.0"
jupyter-protocol = "1.4.0"
jupyter-websocket-client = "1.0.0"
libc = "0.2"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
linkify = "0.10.0"
libwebrtc = "0.3.26"
livekit = { version = "0.7.32", features = ["tokio", "rustls-tls-native-roots"] }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
lsp-types = { git = "https://github.com/zed-industries/lsp-types", rev = "a4f410987660bf560d1e617cb78117c6b6b9f599" }
mach2 = "0.5"
markup5ever_rcdom = "0.3.0"
metal = "0.33"
minidumper = "0.9"
moka = { version = "0.12.10", features = ["sync"] }
naga = { version = "28.0", features = ["wgsl-in"] }
nanoid = "0.4"
nbformat = "1.2.0"
nix = "0.29"
num-format = "0.4.4"
objc = "0.2"
objc2-foundation = { version = "=0.3.1", default-features = false, features = [
    "NSArray",
    "NSAttributedString",
    "NSBundle",
    "NSCoder",
    "NSData",
    "NSDate",
    "NSDictionary",
    "NSEnumerator",
    "NSError",
    "NSGeometry",
    "NSNotification",
    "NSNull",
    "NSObjCRuntime",
    "NSObject",
    "NSProcessInfo",
    "NSRange",
    "NSRunLoop",
    "NSString",
    "NSURL",
    "NSUndoManager",
    "NSValue",
    "objc2-core-foundation",
    "std",
] }
open = "5.0.0"
ordered-float = "2.1.1"
palette = { version = "0.7.5", default-features = false, features = ["std"] }
parking_lot = "0.12.1"
partial-json-fixer = "0.5.3"
parse_int = "0.9"
pciid-parser = "0.8.0"
pathdiff = "0.2"
percent-encoding = "2.3.2"
pet = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "d5b5bb0c4558a51d8cc76b514bc870fd1c042f16" }
pet-conda = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "d5b5bb0c4558a51d8cc76b514bc870fd1c042f16" }
pet-core = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "d5b5bb0c4558a51d8cc76b514bc870fd1c042f16" }
pet-fs = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "d5b5bb0c4558a51d8cc76b514bc870fd1c042f16" }
pet-poetry = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "d5b5bb0c4558a51d8cc76b514bc870fd1c042f16" }
pet-reporter = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "d5b5bb0c4558a51d8cc76b514bc870fd1c042f16" }
pet-virtualenv = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "d5b5bb0c4558a51d8cc76b514bc870fd1c042f16" }
portable-pty = "0.9.0"
postage = { version = "0.5", features = ["futures-traits"] }
pretty_assertions = { version = "1.3.0", features = ["unstable"] }
proc-macro2 = "1.0.93"
profiling = "1"
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
proptest-derive = "0.8.0"
prost = "0.9"
prost-build = "0.9"
prost-types = "0.9"
pollster = "0.4.0"
pulldown-cmark = { version = "0.13.0", default-features = false }
quote = "1.0.9"
rand = "0.9"
rayon = "1.8"
regex = "1.5"
# WARNING: If you change this, you must also publish a new version of zed-reqwest to crates.io
reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
], package = "zed-reqwest", version = "0.12.15-zed" }
rsa = "0.9.6"
runtimelib = { version = "1.4.0", default-features = false, features = [
    "async-dispatcher-runtime", "aws-lc-rs"
] }
rust-embed = { version = "8.4", features = ["include-exclude"] }
rustc-hash = "2.1.0"
rustls = { version = "0.23.26" }
rustls-platform-verifier = "0.5.0"
# WARNING: If you change this, you must also publish a new version of zed-scap to crates.io
scap = { git = "https://github.com/zed-industries/scap", rev = "4afea48c3b002197176fb19cd0f9b180dd36eaac", default-features = false, package = "zed-scap", version = "0.0.8-zed" }
schemars = { version = "1.0", features = ["indexmap2"] }
semver = { version = "1.0", features = ["serde"] }
serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value",
] }
serde_path_to_error = "0.1.17"
serde_repr = "0.1"
serde_urlencoded = "0.7"
shellexpand = "2.1.0"
shlex = "1.3.0"
simplelog = "0.12.2"
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = "2.0"
sqlformat = "0.2"
stacker = "0.1"
stacksafe = "0.1"
streaming-iterator = "0.1"
strsim = "0.11"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
sys-locale = "0.3.1"
sysinfo = "0.37.0"
take-until = "0.2.0"
tempfile = "3.20.0"
tiktoken-rs = { git = "https://github.com/zed-industries/tiktoken-rs", rev = "2570c4387a8505fb8f1d3f3557454b474f1e8271" }
time = { version = "0.3", features = [
    "macros",
    "parsing",
    "serde",
    "serde-well-known",
    "formatting",
    "local-offset",
] }
tiny_http = "0.8"
tokio-tungstenite = { version = "0.26", features = ["__rustls-tls"] }
tokio-socks = { version = "0.5.2", default-features = false, features = [
    "futures-io",
    "tokio",
] }
toml = "0.8"
toml_edit = { version = "0.22", default-features = false, features = [
    "display",
    "parse",
    "serde",
] }
tower-http = "0.4.4"
tree-sitter = { version = "0.26", features = ["wasm"] }
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "5cb9b693cfd7bfacab1d9ff4acac1a4150700609" }
tree-sitter-css = "0.23"
tree-sitter-diff = "0.1.0"
tree-sitter-elixir = "0.3"
tree-sitter-embedded-template = "0.23.0"
tree-sitter-gitcommit = { git = "https://github.com/zed-industries/tree-sitter-git-commit", rev = "88309716a69dd13ab83443721ba6e0b491d37ee9" }
tree-sitter-go = "0.25"
tree-sitter-go-mod = { git = "https://github.com/camdencheek/tree-sitter-go-mod", rev = "2e886870578eeba1927a2dc4bd2e2b3f598c5f9a", package = "tree-sitter-gomod" }
tree-sitter-gowork = { git = "https://github.com/zed-industries/tree-sitter-go-work", rev = "acb0617bf7f4fda02c6217676cc64acb89536dc7" }
tree-sitter-heex = { git = "https://github.com/zed-industries/tree-sitter-heex", rev = "1dd45142fbb05562e35b2040c6129c9bca346592" }
tree-sitter-html = "0.23"
tree-sitter-jsdoc = "0.23"
tree-sitter-json = "0.24"
tree-sitter-md = { git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown", rev = "9a23c1a96c0513d8fc6520972beedd419a973539" }
tree-sitter-python = "0.25"
tree-sitter-regex = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-typescript = { git = "https://github.com/zed-industries/tree-sitter-typescript", rev = "e2c53597d6a5d9cf7bbe8dccde576fe1e46c5899" }
tree-sitter-yaml = { git = "https://github.com/zed-industries/tree-sitter-yaml", rev = "baff0b51c64ef6a1fb1f8390f3ad6015b83ec13a" }
unicase = "2.6"
unicode-script = "0.5.7"
unicode-segmentation = "1.10"
unicode-width = "0.2"
unindent = "0.2.0"
url = "2.2"
urlencoding = "2.1.2"
walkdir = "2.5"
wasm-encoder = "0.221"
wasmparser = "0.221"
wasmtime = { version = "33", default-features = false, features = [
    "async",
    "demangle",
    "runtime",
    "cranelift",
    "component-model",
    "incremental-cache",
    "parallel-compilation",
] }
wasmtime-wasi = "33"
wax = "0.7"
which = "6.0.0"
wasm-bindgen = "0.2.113"
web-time = "1.1.0"
wgpu = { git = "https://github.com/zed-industries/wgpu", rev = "465557eccfe77c840a9b4936f1408da9503372c4" }
windows-core = "0.61"
yawc = "0.2.5"
zeroize = "1.8"
zstd = "0.11"

[workspace.dependencies.windows]
version = "0.61"
features = [
    "Foundation_Numerics",
    "Globalization_DateTimeFormatting",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_RestartManager",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
]

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
notify = { git = "https://github.com/zed-industries/notify.git", rev = "ce58c24cad542c28e04ced02e20325a4ec28a31d" }
notify-types = { git = "https://github.com/zed-industries/notify.git", rev = "ce58c24cad542c28e04ced02e20325a4ec28a31d" }
windows-capture = { git = "https://github.com/zed-industries/windows-capture.git", rev = "f0d6c1b6691db75461b732f6d5ff56eed002eeb9" }
calloop = { git = "https://github.com/zed-industries/calloop" }
livekit = { git = "https://github.com/zed-industries/livekit-rust-sdks", rev = "37835f840d0070d45ac8b31cce6a6ae7aca3f459" }
libwebrtc = { git = "https://github.com/zed-industries/livekit-rust-sdks", rev = "37835f840d0070d45ac8b31cce6a6ae7aca3f459" }

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16
# rustc 1.94.0 debug-mode precondition checks (copy_nonoverlapping alignment,
# Vec internals) cause SIGILL on aarch64. Disable globally until rustc is fixed.
debug-assertions = false
debug = "line-tables-only"

[profile.dev.build-override]
codegen-units = 16
split-debuginfo = "unpacked"
debug = true

[profile.dev.package]
# proc-macros start
gpui_macros = { opt-level = 3 }
derive_refineable = { opt-level = 3 }
settings_macros = { opt-level = 3 }
sqlez_macros = { opt-level = 3, codegen-units = 1 }
ui_macros = { opt-level = 3 }
util_macros = { opt-level = 3 }
quote = { opt-level = 3 }
syn = { opt-level = 3 }
proc-macro2 = { opt-level = 3 }
# proc-macros end

taffy = { opt-level = 3 }
resvg = { opt-level = 3 }
wasmtime = { opt-level = 3 }
# Build single-source-file crates with cg=1 as it helps make `cargo build` of a whole workspace a bit faster
activity_indicator = { codegen-units = 1 }
assets = { codegen-units = 1 }
breadcrumbs = { codegen-units = 1 }
collections = { codegen-units = 1 }
command_palette = { codegen-units = 1 }
command_palette_hooks = { codegen-units = 1 }
feature_flags = { codegen-units = 1 }
file_icons = { codegen-units = 1 }
image_viewer = { codegen-units = 1 }
edit_prediction_ui = { codegen-units = 1 }
install_cli = { codegen-units = 1 }
journal = { codegen-units = 1 }
json_schema_store = { codegen-units = 1 }
lmstudio = { codegen-units = 1 }
menu = { codegen-units = 1 }
notifications = { codegen-units = 1 }
ollama = { codegen-units = 1 }
outline = { codegen-units = 1 }
paths = { codegen-units = 1 }
prettier = { codegen-units = 1 }
project_symbols = { codegen-units = 1 }
refineable = { codegen-units = 1 }
release_channel = { codegen-units = 1 }
reqwest_client = { codegen-units = 1 }
session = { codegen-units = 1 }
sidebar = { codegen-units = 1 }
snippet = { codegen-units = 1 }
snippets_ui = { codegen-units = 1 }
story = { codegen-units = 1 }
telemetry_events = { codegen-units = 1 }
theme_selector = { codegen-units = 1 }
time_format = { codegen-units = 1 }
ui_input = { codegen-units = 1 }
zed_actions = { codegen-units = 1 }

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
declare_interior_mutable_const = "deny"
redundant_clone = "deny"
disallowed_methods = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"

[workspace.metadata.cargo-machete]
ignored = [
    "bindgen",
    "cbindgen",
    "prost_build",
    "serde",
    "component",
    "documented",
    "sea-orm-macros",
]
