[package]
name = "prism-cli"
version = "0.1.0"
edition = "2021"
description = "PrisM CLI — model-agnostic agentic coding assistant"

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
console = "0.15"
crossterm = "0.28"
dirs = "5"
futures = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
