[package]
name    = "prism-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
prism-client = { workspace = true }
prism-types  = { workspace = true }
uglyhat      = { path = "../uglyhat" }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
uuid         = { workspace = true }
clap         = { workspace = true }
futures      = { workspace = true }
tokio-util   = { workspace = true }
globset      = { workspace = true }
walkdir      = { workspace = true }
regex        = { workspace = true }
chrono       = { workspace = true }
async-trait  = { workspace = true }
agent-client-protocol = { workspace = true }
dirs         = "4"
reqwest      = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile     = { workspace = true }
