[package]
name    = "prism-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
prism-client = { workspace = true }
prism-types  = { workspace = true }
prism-context = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = "0.9"
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
uuid         = { workspace = true }
clap         = { workspace = true }
futures      = { workspace = true }
tokio-util   = { workspace = true }
globset      = { workspace = true }
walkdir      = { workspace = true }
regex        = { workspace = true }
chrono       = { workspace = true }
async-trait  = { workspace = true }
agent-client-protocol = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
rustyline    = { workspace = true }
dirs         = "4"
reqwest      = { version = "0.12", features = ["json"] }
similar      = "2"
crossterm    = { version = "0.28", default-features = false }
base64       = "0.22"
toml         = "0.8"
shellexpand  = "3"

[dev-dependencies]
tempfile     = { workspace = true }
