[package]
name    = "prism-cli"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
prism-client = { workspace = true }
prism-context = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
uuid         = { workspace = true }
clap         = { workspace = true }
chrono       = { workspace = true }
dirs         = "4"
toml         = "0.8"

[dev-dependencies]
tempfile     = { workspace = true }
