[package]
name = "prism-dashboard"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/prism_dashboard.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
db.workspace = true
futures.workspace = true
gpui.workspace = true
language_models.workspace = true
prism-client = { workspace = true }
prism-hq = { workspace = true }
prism-types = { workspace = true }
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
uglyhat.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
