[package]
name = "prism-hq"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Agent HQ UI for PrisM — non-file Items and Panels for workspace supervision"
license = "Apache-2.0"

[lib]
path = "src/prism_hq.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
http_client.workspace = true
chrono.workspace = true
db.workspace = true
editor.workspace = true
language.workspace = true
multi_buffer.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
gpui_tokio.workspace = true
language_models.workspace = true
log.workspace = true
menu.workspace = true
notifications.workspace = true
project.workspace = true
prism-client = { workspace = true }
prism-context.workspace = true
prism-types.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
time_format.workspace = true
tokio.workspace = true
ui.workspace = true
ui_input.workspace = true
util.workspace = true
urlencoding.workspace = true
uuid = { workspace = true }
workspace.workspace = true
image.workspace = true
rand.workspace = true
