[package]
name = "prism"
version = "0.1.0"
edition.workspace = true
description = "High-performance Rust LLM gateway"
license = "Apache-2.0"

[lib]
name = "prism"
path = "src/lib.rs"

[[bin]]
name = "prism-server"
path = "src/main.rs"
required-features = ["full"]


[features]
default = ["full"]
full = ["clickhouse-backend", "aws", "redis-backend", "otel", "smtp", "postgres", "jwt"]
embedded = []

clickhouse-backend = ["dep:clickhouse", "dep:time"]
aws               = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-sdk-s3", "dep:aws-types"]
redis-backend     = ["dep:redis"]
otel              = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
smtp              = ["dep:lettre"]
postgres          = []
jwt               = ["dep:jsonwebtoken", "dep:hmac"]
tracing-loki      = ["dep:tracing-loki"]

[dependencies]
prism-types = { workspace = true }
prism-context = { workspace = true }

# HTTP server
axum = { workspace = true }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util", "fs"] }

# Async runtime
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"

# HTTP client (upstream provider calls)
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
serde_yaml = "0.9"

# Database - ClickHouse (observability) — optional
clickhouse = { version = "0.13", features = ["inserter", "time"], optional = true }
time = { version = "0.3", optional = true }

# Database - Postgres (virtual keys) + SQLite (local observability) — always compiled
sqlx = { workspace = true }

# Concurrency + randomness
dashmap = "6"
rand = "0.9"

# Tracing / Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-loki = { version = "0.2", optional = true }

# Utilities
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
async-stream = "0.3"
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"
regex = "1"
jsonschema = "0.28"
arc-swap = "1"
petgraph = "0.7"
jsonwebtoken = { version = "9", optional = true }
hmac = { version = "0.12", optional = true }

# AWS SDK (Bedrock provider + S3 cache) — optional
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-types = { version = "1", optional = true }

# Redis (distributed rate limiting + cache) — optional
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["tonic"], optional = true }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"], optional = true }
ipnetwork = "0.20"
subtle = "2"
dirs = { workspace = true }

# OpenAPI spec generation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
