[package]
name = "uglyhat-panel"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/uglyhat_panel.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
db.workspace = true
gpui.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
