[package]
name = "uglyhat-types"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Pure serde types for uglyhat context management (no sqlx dependency)"

[lib]
path = "src/uglyhat_types.rs"

[lints]
workspace = true

[dependencies]
uglyhat = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
